@@ -5,6 +5,9 @@ Version 7.44 - not yet released
   - remove FFVV NetCoupe
   - update sprint/league time window to 2 hours (as per OLC and DMSt rules)
   - update OLC League calculation to latest ruleset
+  - Make the “Predict wind drift” setting affect arrival altitudes shown in
+    waypoint labels on the map – as it affects arrival altitudes shown
+    everywhere else.
 * tracking
   - xcsoar-cloud-service: rebuild service, new domain cloud.xcsoar.org
 * data files
